Fixed Font Family and Alignment on the Event page. Fixed Alignment on the Cant page, Made the Remove Product Button Bigger and Made the Product Image Smaller on the Cart page. Fixed Alignment on the Checkout page

--- a/sass/plugins/woocommerce/_events.scss
+++ b/sass/plugins/woocommerce/_events.scss
@@ -1,8 +1,16 @@
 .post-type-archive-tribe_events,
 .single-tribe_events {
+  .tribe-common--breakpoint-medium.tribe-common .tribe-common-l-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
   font-family: Montserrat;
   .tribe-common-l-container {
     padding-top: 0;
+  }
+
+  .tribe-common--breakpoint-medium.tribe-events .tribe-events-l-container {
+    max-width: 62.5rem;
   }
 
   .tribe-events-calendar-list__event-date-tag {
@@ -15,7 +23,7 @@
 
   .tribe-events-before-html h2 {
     font-size: 1.375rem;
-    font-weight: 600;
+    font-weight: 700;
     margin-bottom: 1rem;
   }
 
@@ -88,8 +96,9 @@
   }
 
   @media screen and (min-width: 48em) {
-    .tribe-common--breakpoint-medium.tribe-events .tribe-events-l-container {
+    .tribe-common--breakpoint-medium.tribe-common .tribe-common-l-container {
       padding-top: 0;
+      padding-left: 4rem;
     }
 
     .tribe-events-before-html h2 {
@@ -106,6 +115,12 @@
 
     .tribe-events-venue-map {
       width: unset;
+    }
+  }
+
+  @media screen and (min-width: 70em) {
+    .tribe-common--breakpoint-medium.tribe-common .tribe-common-l-container {
+      padding-left: 0;
     }
   }
 }
